# youbot_common

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt~  README.md  Readme.md  manifest.xml  package.xml
debian/: postinst
examples/: youbot_arm_control_test.cpp~  youbot_arm_control_test_republisher.cpp~
include/: YouBotOODLWrapper.h
include/youbot_oodl/: YouBotConfiguration.h  YouBotOODLWrapper.h  joint_state_observer_oodl.h
include/youbot_oodl/youbot_trajectory_action_server/: joint_state_observer.h  joint_trajectory_action.h
launch/: youbot_joint_state_publisher.launch  youbot_oodl.launch  youbot_oodl_driver.launch
msg/: PowerBoardState.msg
src/: YouBotConfiguration.cpp  YouBotConfiguration.h  YouBotOODLWrapper.cpp  joint_state_observer_oodl.cpp  youbot_controller_manager.cpp  youbot_oodl.cpp  youbot_wrapper.cpp
src/examples/: youbot_arm_control_test.cpp  youbot_arm_control_test_republisher.cpp  youbot_arm_test.cpp
src/youbot_trajectory_action_server/: joint_trajectory_action.cpp
utils/: postinst
youbot_drivers/: CMakeLists.txt
youbot_drivers/youbot_oodl/: CMakeLists.txt  package.xml
youbot_drivers/youbot_oodl/src/: YouBotOODLWrapper.h
